@@ -3,16 +3,16 @@ Hash: SHA1
 
 AUX 50gretl-gentoo.el 473 RMD160 3b16bc41fe78a2e8b02a6d02624e74ae1f9c656e SHA1 c992256afbde18e06f5fc3c70ca7e0c7dafafc87 SHA256 7f5398d85016858044257a900e33d9441aa7a3981ac1d71feff79c26b03aa939
 AUX gretl-1.7.5-locale.patch 223 RMD160 2f20cfdf293e12d739797a0424f825dbc4534547 SHA1 36ca4b139f733672a6935406b6058003db9c03a5 SHA256 4633076ed483a595968cb495ef50f72f1a7c5a398acd8ebda907c89fef87d861
-DIST gretl-1.8.5.tar.bz2 6965280 RMD160 1b7de7fe32d25a1713e90f3bab9288e4e3922e40 SHA1 ec12cfe735da24b552aa1a30920f1bc88033582d SHA256 d2dc50eb9d23715ffd421e15558263776347e3f848d0f065f4754c8fa9801017
 DIST gretl-1.8.6.tar.bz2 6982571 RMD160 a6eac7f543b60dca6db25618de7ef9093d9f449e SHA1 dc648e86f9f6be4a80faf8e3e89bd8bef0f6b9fa SHA256 bdfbce0c3a8b136a4a06e67da916d57f6155b1b9d4658db7595fe1fb3c6d89d2
-EBUILD gretl-1.8.5.ebuild 2735 RMD160 fbec890fb81670a7ab40e9336959a098c8356bc2 SHA1 69c5dea16fe4f8169ba586d4f3cba064de5e56be SHA256 cdab9951ffa350f29e704b60a52c748e024dedbe8b0203c66414a0a26a9043ea
+DIST gretl-1.9.0.tar.bz2 7497022 RMD160 91a086e875d5d1eeae6e70e15cf504578ee70924 SHA1 f17a7dcd11633a629367f3018e54c821e1cd66cc SHA256 f95c9dc464559e19837e65cc6fef626e573b76c5213597216214407181109d94
 EBUILD gretl-1.8.6.ebuild 2829 RMD160 eadfce3cfa3654f19440ce2d4a8ad230d3a16e3b SHA1 2947e23089a50bb6ce0f00486e8613b921a7910f SHA256 b1ff9c9642913324a0756e85d0535e3afd57d0fcbe58d5db2cbd15ce68586280
-MISC ChangeLog 4233 RMD160 a80c414a514cdbbe1af72184dcd22f0637ffe0bb SHA1 acff1169f7286e1290fe20514aa4dd7a3de87e08 SHA256 d803112c3c4d9bf3afb9515bc1b60a8a9e11726e807143254f70c0eaecb32671
-MISC metadata.xml 954 RMD160 907c798b9bfe3ca362a255261ba77633e680a940 SHA1 80a02212a2bfe2576d5a209172a730832ede96a2 SHA256 4f4ef8549a7e73d05ae7640a9d847eb96fb343fcf1b0ebd457aaffc2325f5014
+EBUILD gretl-1.9.0.ebuild 3205 RMD160 9ac48c6a4260351f2f8534b450637f643783e8c1 SHA1 5a38a679daf5078ec2817c6f6f42a5e761c735c7 SHA256 a662dcb5134ff0e6ad7ecd62aaa73b8d6351f060a3f3d18175c9147253b29002
+MISC ChangeLog 4417 RMD160 8426874095fc2af68a2159da9979b4025af7f4b9 SHA1 9c440d2404dfc35e6ca7a5e3f174044dbf04cc57 SHA256 28268eb14260d0035658652283448f33dd9e54f45089d822ab153d58b3fb2819
+MISC metadata.xml 1019 RMD160 081129737d01e3b770f502faf5a58f6f7d038b00 SHA1 e4ac0899c6bb566adc9a390be56f81113a13b4db SHA256 ab32034694a6ec3b41bbae6c71eef42c6f64fafd79e79e2542843c5e9d3b8f03
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.13 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAksmxnIACgkQ1ycZbhPLE2BtAwCdEsJXW6JkX/Ay68mmbIGJZpgD
-fA8An0Y2FQKyZl6UwJ3KCl1a56DXcD+C
-=Srmw
+iEYEARECAAYFAkvghRAACgkQ1ycZbhPLE2Cn3gCgmor8l+hZc3O6hEYPwq0kZBnd
+etIAoJMtyVuGNdZoIxMNteW8mdwaw2lb
+=XNoi
 -----END PGP SIGNATURE-----
