@@ -17,5 +17,6 @@
 <use>
   <flag name='sourceview'>Enable support for <pkg>x11-libs/gtksourceview</pkg>
     </flag>
+  <flag name='R'>Enable support for <pkg>dev-lang/R</pkg></flag>
 </use>
 </pkgmetadata>
