@@ -1,6 +1,12 @@
 # ChangeLog for sci-mathematics/gretl
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gretl/ChangeLog,v 1.22 2009/12/14 22:33:36 bicatali Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gretl/ChangeLog,v 1.23 2010/05/04 19:50:48 bicatali Exp $
+
+*gretl-1.9.0 (04 May 2010)
+
+  04 May 2010; Sébastien Fabbro <bicatali@gentoo.org> -gretl-1.8.5.ebuild,
+  +gretl-1.9.0.ebuild, metadata.xml:
+  Version bump. Now supports OpenMP and R
 
 *gretl-1.8.6 (14 Dec 2009)
 
